--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,25 +1,33 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-        Editar Contato
+      Editar Contato
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
   <ion-card class="welcome-card">
     <div class="image-container">
       <img src="{{ contactDetails.image }}" class="image-contact">
-    </div> 
+    </div>
     <ion-card-header>
       <ion-card-title class="title-card">{{ contactDetails.nome }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="contact">
-        <ion-input placeholder="Nome" formControlName="nome" value="{{ contactDetails.nome }}"></ion-input>
-        <ion-input placeholder="Telefone" formControlName="telefone" value="{{ contactDetails.telefone }}"></ion-input>
-        <ion-input placeholder="Email" formControlName="email" value="{{ contactDetails.email }}"></ion-input>
-        <ion-button color="primary" (click)="saveContact()">Salvar</ion-button>
-        <ion-button color="danger" (click)="removeData()">Remover</ion-button>
+        <span style="color:black">Nome</span>
+        <ion-input class="form-control" placeholder="Nome" formControlName="nome" value="{{ contactDetails.nome }}"></ion-input>
+        <span style="color:black">Telefone</span>
+        <ion-input class="form-control" placeholder="Telefone" formControlName="telefone" value="{{ contactDetails.telefone }}"></ion-input>
+        <span style="color:black">Email</span>
+        <ion-input class="form-control" placeholder="Email" formControlName="email" value="{{ contactDetails.email }}"></ion-input>
+        <div class="button-actions">
+          <ion-button color="primary" (click)="saveContact()">Salvar</ion-button>
+          <ion-button color="danger" (click)="removeData()">Excluir</ion-button>
+        </div>
       </form>
     </ion-card-content>
   </ion-card>
