--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -11,19 +11,19 @@
 <ion-content fullscreen>
   <ion-card class="welcome-card">
     <div class="image-container">
-      <img src="{{ contactDetails.image }}" class="image-contact">
+      <img src="../../../assets/imgs/avatar.png" class="image-contact">
     </div>
     <ion-card-header>
-      <ion-card-title class="title-card">{{ contactDetails.nome }}</ion-card-title>
+      <ion-card-title class="title-card">{{ contactDetails.name }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="contact">
         <span style="color:black">Nome</span>
-        <ion-input class="form-control" placeholder="Nome" formControlName="nome" value="{{ contactDetails.nome }}"></ion-input>
+        <ion-input class="form-control" placeholder="Nome" formControlName="name" [(ngModel)]="contactDetails.name"></ion-input>
         <span style="color:black">Telefone</span>
-        <ion-input class="form-control" placeholder="Telefone" formControlName="telefone" value="{{ contactDetails.telefone }}"></ion-input>
+        <ion-input class="form-control" placeholder="Telefone" formControlName="phone" [(ngModel)]="contactDetails.phone"></ion-input>
         <span style="color:black">Email</span>
-        <ion-input class="form-control" placeholder="Email" formControlName="email" value="{{ contactDetails.email }}"></ion-input>
+        <ion-input class="form-control" placeholder="Email" formControlName="email" [(ngModel)]="contactDetails.email"></ion-input>
         <div class="button-actions">
           <ion-button color="primary" (click)="saveContact()">Salvar</ion-button>
           <ion-button color="danger" (click)="removeData()">Excluir</ion-button>
