--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -27,3 +27,11 @@ img {
 .card-content-ios {
     padding-top: 0;
 }
+
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; /* red */
+  }
